[package]
name = "seahaven"
version = "0.1.0"
authors = ["Michael Bass <mbass@healthpocket.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
base64 = "0.21.7"
md5 = "0.7.0"
rand = "0.8.5"
sha2 = "0.10.8"
terminal = "0.2.1"
